--- a/ADVANTAGES.html
+++ b/ADVANTAGES.html
@@ -10,9 +10,9 @@
     <!-- navbar -->
     <div class="banner">
         <div class="navbar">
-            <h1 font="serif" class="icon"><a href="temp.html">HYDROPOWER</a></h1>
+            <h1 font="serif" class="icon"><a href="index.html">HYDROPOWER</a></h1>
             <ul>
-                <li><a href="index.html" target="_blank">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="Developers.html" target="_blank">Developers</a></li>
             </ul>
         </div>
