--- a/About_Us.html
+++ b/About_Us.html
@@ -11,7 +11,7 @@
         <div class="navbar">
             <h1 font="serif" class="icon">About Us</h1>
             <ul>
-                <li><a href="index.html" target="_blank">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="Developers.html" target="_blank">Developers</a></li>
             </ul>
         </div>
